{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 179,
  "lineage": "5c43ae6d-b49b-d420-3ecc-b05b9c154085",
  "resources": [
    {
      "module": "module.app_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
            "name": "app-subnet",
            "resource_group_name": "vnet-rg",
            "service_endpoints": [
              "Microsoft.Sql"
            ],
            "virtual_network_name": "vnet01"
          }
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
            "name": "app-subnet",
            "network_security_group_id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/app-rg/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "resource_group_name": "vnet-rg",
            "service_endpoints": [
              "Microsoft.Sql"
            ],
            "virtual_network_name": "vnet01"
          }
        }
      ]
    },
    {
      "module": "module.db_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
            "name": "db-subnet",
            "resource_group_name": "vnet-rg",
            "virtual_network_name": "vnet01"
          }
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/app-rg/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "centralindia",
            "name": "app-nsg",
            "resource_group_name": "app-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "app_rule",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "centralindia",
            "name": "web-nsg",
            "resource_group_name": "web-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "https",
                "priority": 301,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/app-rg/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet"
          },
          "dependencies": [
            "module.app_subnet.azurerm_subnet.subnet",
            "module.rg1.azurerm_resource_group.rg",
            "module.securitygroup.azurerm_network_security_group.app-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet"
          },
          "dependencies": [
            "module.rg1.azurerm_resource_group.rg",
            "module.securitygroup.azurerm_network_security_group.nsg",
            "module.web_subnet.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/web-rg/providers/Microsoft.Network/networkInterfaces/web_nic",
            "internal_domain_name_suffix": "disc2toy1puezoykkgouafmvxf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web_ip",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/webhost-pip",
                "subnet_id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-72-0C-1C",
            "name": "web_nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "web-rg",
            "virtual_machine_id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/web-rg/providers/Microsoft.Compute/virtualMachines/webhost"
          },
          "dependencies": [
            "module.rg1.azurerm_resource_group.rg",
            "module.vms.azurerm_public_ip.public-ip",
            "module.web_subnet.azurerm_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/webhost-pip",
            "idle_timeout_in_minutes": 30,
            "ip_address": "20.207.206.98",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "webhost-pip",
            "resource_group_name": "web-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vms_app",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/app-rg/providers/Microsoft.Network/networkInterfaces/app_nic",
            "internal_domain_name_suffix": "disc2toy1puezoykkgouafmvxf.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "app_ip",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/app-rg/providers/Microsoft.Network/publicIPAddresses/apphost-pip",
                "subnet_id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AD-3C-6C",
            "name": "app_nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "app-rg",
            "virtual_machine_id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/app-rg/providers/Microsoft.Compute/virtualMachines/apphost"
          },
          "dependencies": [
            "module.app_subnet.azurerm_subnet.subnet",
            "module.rg2.azurerm_resource_group.rg",
            "module.vms_app.azurerm_public_ip.public-ip"
          ]
        }
      ]
    },
    {
      "module": "module.vms_app",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/app-rg/providers/Microsoft.Network/publicIPAddresses/apphost-pip",
            "idle_timeout_in_minutes": 30,
            "ip_address": "20.207.207.238",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "apphost-pip",
            "resource_group_name": "app-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rg2.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4d2e241a-dbd8-4ce8-bb0a-519d401595bd",
            "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01",
            "location": "centralindia",
            "name": "vnet01",
            "resource_group_name": "vnet-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
                "name": "web-subnet",
                "security_group": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/app-subnet",
                "name": "app-subnet",
                "security_group": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/app-rg/providers/Microsoft.Network/networkSecurityGroups/app-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/db-subnet",
                "name": "db-subnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.rg.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.web_subnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ac69b08c-549d-4b2d-9643-50f472e96ab0/resourceGroups/vnet-rg/providers/Microsoft.Network/virtualNetworks/vnet01/subnets/web-subnet",
            "name": "web-subnet",
            "resource_group_name": "vnet-rg",
            "virtual_network_name": "vnet01"
          }
        }
      ]
    }
  ]
}